--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body style="font-family: cursive; background-color: #eaeaea;">
 
     <!-- NAVBAR -->
-    <nav class="konnav">
+    <nav class="konnav shadow">
         <div class="brand">Im<span>Zayn</span></div>
         <ul class="navi">
             <li>
